--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -19,6 +19,19 @@
 
 </div>
 
+<div>
+    <ul><p>태그별 검색</p>
+        <li><a href="/questions/tagList?tags=Pawnable">Pawnable</a></li>
+        <li><a href="/questions/tagList?tags=Reversing">Reversing</a></li>
+        <li><a href="/questions/tagList?tags=Web">Web</a></li>
+        <li><a href="/questions/tagList?tags=Crypto">Crypto</a></li>
+
+
+
+    </ul>
+</div>
+
+
 <div style="height: 50px;"></div>
 <form style="display:flex; width:50%; margin:auto; background-color: #00FF00; height: 50px; align-items: center; justify-content: center;" th:action="@{/search}" method="get">
     <input style="width:80%; height: 80%" type="text" name="query" placeholder="Search"/>
