--- a/src/main/resources/static/css/board.css
+++ b/src/main/resources/static/css/board.css
@@ -47,3 +47,97 @@ body{
     margin: 0;
     padding: 0;
 }
+
+div {
+    display: block;
+}
+.reply {
+    margin-left: 20px;
+    padding-left: 20px;
+    border-left: 1px solid #ddd;
+}
+textarea {
+    padding: 10px;
+    border-radius: 5px;
+    border: 2px solid #f2f2f2;
+    background-color: #f2f2f2;
+    resize: none;
+}
+textarea.wmd-input,textarea#wmd-input{
+    padding: 10px;
+    margin: -1px 0 0;
+    height: 200px;
+    line-height: 1.3;
+    width: 98%;
+
+    -moz-tab-size: 4;
+    -o-tab-size: 4;
+    tab-size: 4;
+}
+
+.selected {
+    border: 2px solid yellow;
+    padding: 10px;
+}
+.left{
+    grid-column: 1/3;
+}
+.center {
+
+    grid-column: 2 / 3; /* spans the second column */
+}
+.right {
+    grid-column: 3/ 3; /* spans the third column */
+}
+.grid-container {
+    display: grid;
+    grid-template-columns: 20% 55% 25%; /* sets the width of each column */
+}
+.btn-group {
+    display: flex;
+}
+.btn-group button, .btn-group form,li {
+    display: inline-block;
+}
+.bottom-nav {
+    display: flex;
+    justify-content: space-between;
+    background-color: #1a1e21;
+    height: auto;
+}
+
+code {
+    background-color: #f1f1f1;
+    padding: 0.2em 0.4em;
+    border-radius: 4px;
+}
+#answer-btn-bar button {
+    width: 30px;
+    height: 30px;
+    margin-right: 5px;
+}
+
+#answer-btn-bar {
+    clear: both;
+    background-color: transparent;
+    margin: 10px 0 0 0;
+    padding: 0;
+    width: 100%;
+    border: 1px solid hsl(210,8%,75%);
+    border-bottom: 0;
+    min-height: 44px;
+    overflow: hidden;
+    z-index: 2;
+    position: relative;
+}
+.answer-btn-row
+{
+    padding: 0 4px 0 8px;
+    margin: 0;
+    display: flex;
+    list-style: none;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    height: 44px;
+    border-bottom: 1px solid hsl(210,8%,75%);
+}
